2004-05-22 TADA Tadashi <sho@spc.gr.jp>
	* theme/blog/blog.css: add '@charset "euc-jp";'.

2004-05-16 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample*: add self URL into @no_referer. thanks ZnZ <zn@mbf.nifty.com>.

2004-05-09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support absolute path of @conf.index.

2004-05-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: output full text into description.

2004-05-04 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add description of items into rdf.

2004-03-31 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add adf:about attr into <channel>.

2004-03-20 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: disable section of TrackBack source.

2004-02-26 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add <dc:creator> into RDF.

2004-02-19 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support conf_proc and split English resource.

2004-02-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: remove debug print. thanks MATSUOKA Kohei <kohei@machu.jp>.

2004-02-17 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: fix about <link> element in HTML header.

2004-01-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: hide category in the list.

2003-12-12 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add whatsnew_list.rdf.image options. thanks Kouhei Sutou <kou@cozmixng.org>.

2003-12-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: apply plugin to rdf file.

2003-11-27 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support Config#base_url.

2003-11-13 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.6.

2003-11-07 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add information to HTML header for Auto-Discovery.
	* plugin/whatsnew-list.rb: i18n.

2003-10-24 TADA Tadashi <sho@spc.gr.jp>
	* plugin/title-navi.rb: apply_plugin support.

2003-10-15 Junichiro Kita <kita@kitaj.no-ip.com>